Quick fixes for text truncate

--- a/src/app/chat-info/chat-info.component.css
+++ b/src/app/chat-info/chat-info.component.css
@@ -20,6 +20,6 @@
   }
 
   .custom-card {
-    width: 500px;
+    width: 600px;
   }
 }
